--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ header {
 header h1{
     margin-top: 65px;
     font-family: passion one;
-    font-size: 3.5em;
+    font-size: 6vw;
     line-height: 0px;
 }
 header p {
@@ -28,7 +28,7 @@ header p {
     font-size: 1.4em;
 }
 p {
-    font-size: 1.5em;
+    font-size: 3vw;
     font-family: sriracha;
 }
 header a {
@@ -67,7 +67,7 @@ article {
     margin-top: 10vh;
     margin-bottom: 10vh;
     margin-left: 20px;
-    width: 280px;
+    display: inline-block;
     color: white;
     background-color: rgba(0, 0, 0, 0.575);
 }
@@ -88,7 +88,7 @@ article {
     margin-top: 10vh;
     margin-bottom: 10vh;
     margin-left: 20px;
-    width: 290px;
+    display: inline-block;
     color: white;
     background-color: rgba(0, 0, 0, 0.575);
 }
